test/files/neg/quasiquotes_escapes.check
quasiquotes_escapes.scala:3: error: invalid escape character
  println(s"foo/qbar")
                ^
quasiquotes_escapes.scala:3: error: error during string interpolation
  println(s"foo/qbar")
          ^
two errors found
